--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>
     The Lash and Brow Bar - Hannah
   </title>
-  <link rel="icon" type="image/png" href="img/logo.png">
+  <link rel="icon" type="image/png" href="img/logo2.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -30,7 +30,7 @@
 
 
     <a href="#" class="logo">
-      <img src="/img/logo2.png" alt="Alt text describing the image">
+      <img src="/img/logo.png" alt="Alt text describing the image">
     </a>
     <nav class="navbar">
       <a href="#home">home</a>
